# geo-viewer-backend

./: .dockerignore  .env.development  .env.production  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  init-postgis.sql  main.py  pyproject.toml  test_db.py
alembic/: env.py
alembic/versions/: 438f5fb88d41_initial_schema.py  5c5e0e299cc5_init.py  97ceff422a5e_fix_enums_standard.py  f2b9ac039ca0_add_new_columns.py
app/: main.py
app/config/: settings.py
app/database/: db.py  db_context.py
app/exceptions/: request_exception.py
app/models/: Feature.py  Layer.py  Test.py  __init__.py  file_import.py  project.py  user.py
app/routers/: project.py  user.py
app/schemas/: custom_base.py  layer.py  project.py  user.py
app/services/: project.py  user.py
app/utils/: api_exception_case.py  db_utils.py  logging.py
tests/: conftest.py  test_users.py
